# market-compass

./: .cursorignore  .cursorrules  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.base.json  vercel.json
services/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_migrations.sh  run_migrations_local.sh
services/api/alembic/: env.py
services/api/alembic/versions/: 0c7a0d3c9a1e_add_pattern_phrases.py  2a4c6e9b1d7f_add_pattern_suggestions.py  4b7ae79c0a2c_expand_immersive_token_to_text.py  5c1b8a0d2f6e_add_pattern_suggestion_confidence.py  6c9233f33b34_add_condition_to_offers.py  7f2a1c9d4e8b_add_reason_codes_to_offers.py  9b3f1a2d4c10_add_raw_offers_table.py  b3c1e8f0a2d7_merge_heads_raw_offers_and_immersive.py  c6581b221719_initial_schema.py
services/api/app/: __init__.py  main.py  settings.py
services/api/app/models/: __init__.py  merchant.py  offer.py  pattern_phrase.py  pattern_suggestion.py  raw_offer.py  sku.py
services/api/app/routes/: __init__.py  admin.py  redirect.py  ui.py
services/api/app/schemas/: __init__.py  common.py  home.py
services/api/app/services/: __init__.py  attribute_extractor.py  debug_storage.py  dedup.py  (+11 more)
services/api/scripts/: __init__.py  debug_openai_chat.py  reconcile_raw_offers.py  refresh_daily.py  seed.py  seed_iphone16_17_golden_skus.py  start.sh
services/api/tests/: __init__.py  test_attribute_extractor.py  test_fx.py  test_health.py  test_llm_parser.py  test_serpapi_client_currency.py  test_trust_reason_codes.py
(+61 files in other folders)
